<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/Logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/Email_login"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <EditText
        android:id="@+id/Password_login"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_login" />

    <TextView
        android:id="@+id/ForgotPassword_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.Button"
        android:textColor="#2196f3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_login" />

    <Button
        android:id="@+id/signup_signup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fb_login_btn"
        android:fontFamily="@font/roboto"
        android:text="@string/login_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassword_login" />


</android.support.constraint.ConstraintLayout>